マウスでの操作を切り替えれるようにした

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,18 @@ set -g window-status-format "#[fg=white bg=colour17] #I #[bg=colour62] #[fg=whit
 set -g window-status-current-format "#[bg=colour188] #I #[bg=colour188] #W#F"
 
 # マウス操作を有効にする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
+
+# マウス関連（デフォルトはOFFにしておいて、prefix+mでマウスモードを切替える）http://bit.ly/ZzG7iN
+set-option -gw mode-mouse off
+bind-key m \
+  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-utf8 on" "set-option -gq mouse-utf8 off" \;\
+  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-resize-pane on" "set-option -gq mouse-resize-pane off" \;\
+  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-select-pane on" "set-option -gq mouse-select-pane off" \;\
+  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-select-window on" "set-option -gq mouse-select-window off" \;\
+  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gw mode-mouse on" "set-option -gw mode-mouse off"\;\
+  if-shell "tmux show-options -gw mode-mouse | grep off" "display-message \"mouse free\"" "display-message \"mouse on tmux\""
+
