--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,12 +38,12 @@ set -g window-status-current-format "#[bg=colour188] #I #[bg=colour188] #W#F"
 #set -g mouse-select-window on
 
 # マウス関連（デフォルトはOFFにしておいて、prefix+mでマウスモードを切替える）http://bit.ly/ZzG7iN
-set-option -gw mode-mouse off
+set-option -gw mouse off
 bind-key m \
-  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-utf8 on" "set-option -gq mouse-utf8 off" \;\
-  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-resize-pane on" "set-option -gq mouse-resize-pane off" \;\
-  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-select-pane on" "set-option -gq mouse-select-pane off" \;\
-  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gq mouse-select-window on" "set-option -gq mouse-select-window off" \;\
-  if-shell "tmux show-options -gw mode-mouse | grep off" "set-option -gw mode-mouse on" "set-option -gw mode-mouse off"\;\
-  if-shell "tmux show-options -gw mode-mouse | grep off" "display-message \"mouse free\"" "display-message \"mouse on tmux\""
+  if-shell "tmux show-options mouse | grep off" "set-option -gq mouse-utf8 on" "set-option -gq mouse-utf8 off" \;\
+  if-shell "tmux show-options mouse | grep off" "set-option -gq mouse-resize-pane on" "set-option -gq mouse-resize-pane off" \;\
+  if-shell "tmux show-options mouse | grep off" "set-option -gq mouse-select-pane on" "set-option -gq mouse-select-pane off" \;\
+  if-shell "tmux show-options mouse | grep off" "set-option -gq mouse-select-window on" "set-option -gq mouse-select-window off" \;\
+  if-shell "tmux show-options mouse | grep off" "set-option mouse on" "set-option mouse off"\;\
+  if-shell "tmux show-options mouse | grep off" "display-message \"mouse free\"" "display-message \"mouse on tmux\""
 
